--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   redis-sync:
     build: 
@@ -13,7 +11,7 @@ services:
     depends_on:
       - redis
     networks:
-      - shared-network
+      - cryptosniper-network
     restart: always
 
   redis:
@@ -24,14 +22,13 @@ services:
     volumes:
       - redis-data:/data
     networks:
-      - shared-network
+      - cryptosniper-network
     command: redis-server --requirepass ${REDIS_PASSWORD}
     restart: always
 
 networks:
-  shared-network:
+  cryptosniper-network:
     driver: bridge
-    name: cryptosniper-network
 
 volumes:
   redis-data:
