--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,7 @@ name: Deploy to EC2
 on:
   push:
     branches: [master]
-    workflow_dispatch  # 只有手動觸發才會執行
+    # workflow_dispatch  # 只有手動觸發才會執行
 
 jobs:
   deploy:
